ref: move knex to config and set main file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "knex-meta",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "main.ts",
   "scripts": {
     "test": "vitest"
   },
