--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "knex-meta",
   "version": "1.1.0",
   "description": "",
-  "main": "main.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "build": "tsup ./index.ts --format cjs,esm --dts --clean"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +17,15 @@
     "bluebird": "^3.7.2",
     "knex": "^2.1.0",
     "moment": "^2.29.3",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "tsup": "^6.1.3"
+  },
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
