--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "vitest",
     "build": "tsup ./index.ts --format cjs,esm --dts --clean",
-    "watch": "npm run build -- --watch src"
+    "build:watch": "npm run build -- --watch src"
   },
   "keywords": [
     "knex",
