--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "knex": "^2.1.0",
     "moment": "^2.29.3",
     "mysql": "^2.18.1",
-    "tsup": "^6.1.3",
-    "unbuild": "^0.7.6"
+    "tsup": "^6.1.3"
   },
   "exports": {
     ".": {
