--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "test": "vitest",
     "build": "tsup",
     "build:watch": "npm run build -- --watch src",
-    "release": "release-it",
-    "release-it": "^15.2.0"
+    "release": "release-it"
   },
   "keywords": [
     "knex",
@@ -48,6 +47,7 @@
     "ts-node": "^10.8.2",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "vitest": "^0.17.0"
+    "vitest": "^0.17.0",
+    "release-it": "^15.2.0"
   }
 }
