--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "knex-meta",
-  "version": "1.1.4",
-  "description": "",
+  "name": "@jeash/knex-meta",
+  "version": "1.0.0",
+  "description": "<div id=\"top\"></div>\r <!--\r *** Thanks for checking out the Best-README-Template. If you have a suggestion\r *** that would make this better, please fork the repo and create a pull request\r *** or simply open an issue with the tag \"enhancement\".\r *** Don't forget to give the project a star!\r *** Thanks again! Now go create something AMAZING! :D\r -->",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -10,6 +10,9 @@
     "build": "tsup",
     "build:watch": "npm run build -- --watch src",
     "release": "release-it"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "keywords": [
     "knex",
@@ -49,5 +52,13 @@
     "typescript": "^4.7.4",
     "vitest": "^0.17.0",
     "release-it": "^15.2.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KarmaBlackshaw/knex-meta.git"
+  },
+  "bugs": {
+    "url": "https://github.com/KarmaBlackshaw/knex-meta/issues"
+  },
+  "homepage": "https://github.com/KarmaBlackshaw/knex-meta#readme"
 }
