--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,12 +28,11 @@ jobs:
       - run: npm install
       - run: npm run test
 
-      - name: Build & Push
-        uses: s0/git-publish-subdir-action@develop
+      - name: Build
       - run: npm run build
-        env:
-          REPO: self
-          BRANCH: master # The branch name where you want to push the assets
-          FOLDER: dist # The directory where your assets are generated
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
-          MESSAGE: "Build: ({sha}) {msg}" # The commit message
+
+      - name: Push build files
+      - run: |
+        git add .
+        git commit -m "chore(build)"
+        git push origin master
