--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,8 +25,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-        run: npm install
-        run: npm run test
+        run: |
+          npm install
+          npm run test
 
       - name: Build
         run: npm run build
