--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,19 +21,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-        run: |
+      - run: |
           npm install
           npm run test
-
-      - name: Build
-        run: npm run build
-
-      - name: Push build files
-        run: |
-          git add .
-          git commit -m "chore(build)"
-          git push origin master
