--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/lodash": "^4.14.182",
     "bluebird": "^3.7.2",
     "knex": "^2.1.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "mysql": "^2.18.1",
     "tsup": "^6.1.3"
