--- a/package.json
+++ b/package.json
@@ -27,17 +27,19 @@
   "dependencies": {
     "@types/lodash": "^4.14.182",
     "bluebird": "^3.7.2",
+    "dedent": "^0.7.0",
     "dotenv": "^16.0.3",
+    "fast-glob": "^3.2.12",
     "knex": "^2.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "mysql": "^2.18.1",
+    "simple-git-hooks": "^2.8.1",
     "tsup": "^6.1.3"
   },
   "exports": {
     ".": {
       "require": "./dist/index.js",
-      "import": "./dist/index.mjs",
       "types": "./dist/index.d.ts"
     }
   },
@@ -52,6 +54,7 @@
     "eslint-plugin-promise": "4.3.1",
     "eslint-plugin-standard": "4.0.1",
     "jest": "^28.1.2",
+    "lint-staged": "^13.2.0",
     "nodemon": "^2.0.18",
     "release-it": "^15.2.0",
     "ts-node": "^10.8.2",
@@ -68,5 +71,12 @@
   "bugs": {
     "url": "https://github.com/KarmaBlackshaw/knex-meta/issues"
   },
-  "homepage": "https://github.com/KarmaBlackshaw/knex-meta#readme"
+  "homepage": "https://github.com/KarmaBlackshaw/knex-meta#readme",
+  "lint-staged": {
+    "*.{js,ts}": "eslint --fix"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged",
+    "pre-push": "cd ../../ && npm run format"
+  }
 }
