--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
   },
   "homepage": "https://github.com/KarmaBlackshaw/knex-meta#readme",
   "lint-staged": {
-    "*.{js,ts}": "eslint --fix"
+    "*.{js,ts}": "eslint"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged",
