--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
     "*.{js,ts}": "eslint"
   },
   "simple-git-hooks": {
-    "pre-commit": "npx lint-staged",
-    "pre-push": "cd ../../ && npm run format"
+    "pre-commit": "npx lint-staged"
+  },
+  "directories": {
+    "doc": "docs"
   }
 }
