--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "mysql": "^2.18.1",
+    "recast": "^0.22.0",
     "simple-git-hooks": "^2.8.1",
+    "sql-formatter": "^12.1.3",
     "tsup": "^6.1.3"
   },
   "exports": {
