chore: update docs

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
     "prepare": "npx simple-git-hooks",
-    "write-src-index": "ts-node scripts/writeSrcIndex.ts && eslint ./src/index.ts --fix"
+    "write-src-index": "ts-node scripts/writeSrcIndex.ts && eslint ./src/index.ts --fix",
+    "write-utility-doc": "ts-node scripts/writeUtilityDocs.ts"
   },
   "publishConfig": {
     "access": "public"
@@ -32,6 +33,7 @@
     "dedent": "^0.7.0",
     "dotenv": "^16.0.3",
     "fast-glob": "^3.2.12",
+    "fs-extra": "^11.1.0",
     "knex": "^2.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
